--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,3 @@
+spring.profiles.active=prod
 
-spring.profiles.active=test
-
-# Indica que o jpa só estará disponível até a camada de serviços
 spring.jpa.open-in-view=false
