--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react-leaflet": "^3.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/leaflet": "^1.5.19",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^3.1.2"
   }
 }
